# polycrawler

./: .dvcignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
dashboards/: app.py
eval/: __init__.py  backtest.py  baseline_metrics.json  gate.py
src/: summarize.py
src/common/: __init__.py  asof.py  config.py  embeddings_client.py  http.py  llm_client.py  schema.py  store.py  timeutils.py
src/decision/: __init__.py  paper_trade.py
src/extraction/: __init__.py  extract.py  prefilter.py  schema.py
src/ingestion/: __init__.py  football_data.py  news_rss.py  reddit.py  run.py
src/mlops/: __init__.py  dashboard_data.py  drift.py  quota.py  tracking.py
src/prediction/: __init__.py  calibration.py  features.py  model.py  train.py
src/retrieval/: __init__.py  index.py  retrieve.py
tests/: test_asof.py  test_backtest.py  test_config.py  test_extraction.py  test_ingestion.py  test_mlops.py  test_paper_trade.py  test_prediction.py  test_retrieval.py  test_summarize.py  test_timeutils.py
