[project]
name = "polycrawler"
version = "0.0.0"
description = "Sports outcome calibration engine (RAG + fine-tuning + MLOps). Calibration-first, paper-only."
requires-python = ">=3.11"
# Phase 0 only needs the store + config. Deps are added per phase, not up front.
dependencies = [
    "duckdb>=1.1,<2",
    "pyyaml>=6,<7",
    "httpx>=0.27",
    "feedparser>=6.0",
    "praw>=7.7",
    "truststore>=0.9",   # use OS cert store (this network does TLS interception)
    "tzdata>=2024.1",    # zoneinfo needs this on Windows (Europe/London kickoffs)
    "pydantic>=2",       # extraction schema + validation
    "openai>=1.40",      # OpenAI-compatible client for the hosted NVIDIA endpoint
    "qdrant-client>=1.10",  # vector store; local in-process mode (no Docker) for dev
    "lightgbm>=4.0",        # gradient-boosted predictor (CPU)
    "scikit-learn>=1.3",    # isotonic calibration + metrics
]

[dependency-groups]
dev = ["pytest>=8,<9"]
# Heavy, optional: install with `uv sync --group mlops`. Core + tests don't need these.
mlops = ["mlflow>=2.14", "streamlit>=1.36"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore:X does not have valid feature names"]  # cosmetic LGBM+numpy warning
